welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:51: error: expected class or object definition
faireA()       
^FlowerCase:53: error: Unmatched closing brace '}' ignored here
}
^